--- a/beauty-index/index.html
+++ b/beauty-index/index.html
@@ -246,6 +246,7 @@
         <div class="swiper-pagination"></div>
     </div>
     <!-- Swiper JS -->
+    <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/swiper.min.js"></script>
     <script>
         var swiper = new Swiper('#swiperContent', {
