--- a/beauty-index/index.html
+++ b/beauty-index/index.html
@@ -102,8 +102,12 @@
                             <div class="col-lg-4 col-12 item"><img src="./images/idx2-0.png " alt=" ">
                                 <h3 class="idx2-text">开单收银</h3>
                             </div>
-                            <div class="col-lg-4 col-12 item"><img src="./images/idx2-1.png " alt=" "></div>
-                            <div class="col-lg-4 col-12 item"><img src="./images/idx2-2.png " alt=" "></div>
+                            <div class="col-lg-4 col-12 item"><img src="./images/idx2-1.png " alt=" ">
+                                <h3 class="idx2-text">简单高效</h3>
+                            </div>
+                            <div class="col-lg-4 col-12 item"><img src="./images/idx2-2.png " alt=" ">
+                                <h3 class="idx2-text">流水明细</h3>
+                            </div>
 
                         </div>
                         <!-- 页脚 -->
