--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- icon -->
+    <script src="//at.alicdn.com/t/c/font_4493828_pf10mk7jgde.js"></script>
   </body>
 </html>
